--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "UNLIMITED FILTER BOT",
+    "name": "EVERGREEN FILTER BOT",
     "description": "An unlimited filter bot using Mongo DB",
     "logo": "https://telegra.ph/file/71aaa621508cd696ab538.jpg",
     "keywords": [
